@@ -1,5 +1,5 @@
 /*
- * "$Id: printers.h,v 1.22.2.20 2004/08/23 18:01:56 mike Exp $"
+ * "$Id: printers.h,v 1.22.2.21 2004/10/04 20:24:17 mike Exp $"
  *
  *   Printer definitions for the Common UNIX Printing System (CUPS) scheduler.
  *
@@ -135,7 +135,10 @@ extern const char	*ValidateDest(const char *hostname,
 				      printer_t **printer);
 extern void		WritePrintcap(void);
 
+extern char		*cupsdSanitizeURI(const char *uri, char *buffer,
+			                  int buflen);
+
 
 /*
- * End of "$Id: printers.h,v 1.22.2.20 2004/08/23 18:01:56 mike Exp $".
+ * End of "$Id: printers.h,v 1.22.2.21 2004/10/04 20:24:17 mike Exp $".
  */
